--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
         <version>2.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.learning.kafka-example</groupId>
-    <artifactId>kafka-consumer</artifactId>
+    <groupId>org.project.kafka</groupId>
+    <artifactId>api-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>kafka-consumer</name>
+    <name>api-service</name>
     <description>Kafka Consumer example</description>
     <properties>
         <java.version>1.8</java.version>
@@ -31,6 +31,17 @@
             <version>2.8.9</version>
         </dependency>
 
+        <!-- Distributed Tracing Dependencies -->
+        <dependency>
+            <groupId>io.opentracing.contrib</groupId>
+            <artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.opentracing.contrib</groupId>
+            <artifactId>opentracing-spring-tracer-configuration-starter</artifactId>
+            <version>0.3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
