--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>api-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>api-service</name>
-    <description>Kafka Consumer example</description>
+    <description>API Service with Kafka Producer</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
